--- a/madlibthriller.html
+++ b/madlibthriller.html
@@ -2,6 +2,13 @@
 <html>
 <head><title>Mad Lib Thriller Title Generator</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+</head>
+<body>
+<h1>Mad Lib Thriller Title Generator</h1>
+<button onclick="generate();">Generate</button>
+<ul id="titles"></ul>
+<p><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/InteractiveResource" property="dct:title" rel="dct:type">Mad Lib Thriller Title Generator (v1.1)</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://jona-stubbe.de" property="cc:attributionName" rel="cc:attributionURL">CrystalGamma (Jona Stubbe)</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
+
 <script>//<[CDATA[
 (function(){
 var name = ["Parsifal", "Janson", "Ludlum", "Wagner", "Mozart"];
@@ -51,12 +58,7 @@ window.generate = function() {
 	oldTitles.parentNode.replaceChild(titles, oldTitles);
 };
 })();
+generate();
 //]]></script>
-</head>
-<body>
-<h1>Mad Lib Thriller Title Generator</h1>
-<button onclick="generate();">Generate</button>
-<ul id="titles"></ul>
-<p><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/InteractiveResource" property="dct:title" rel="dct:type">Mad Lib Thriller Title Generator (v1)</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://jona-stubbe.de" property="cc:attributionName" rel="cc:attributionURL">CrystalGamma (Jona Stubbe)</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
 </body>
 </html>
