fixes the case if the console object does not exist (IIRC MSIE does this)

--- a/madlibthriller.html
+++ b/madlibthriller.html
@@ -5,9 +5,11 @@
 </head>
 <body>
 <h1>Mad Lib Thriller Title Generator</h1>
+<p>Inspired by <a href="http://tvtropes.org/pmwiki/pmwiki.php/Main/MadLibThrillerTitle">this TVTropes page</a>.</p>
+<p>JavaScript needs to be activated. Click "Generate" to generate a new set of Thriller Titles.</p>
 <button onclick="generate();">Generate</button>
 <ul id="titles"></ul>
-<p><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/InteractiveResource" property="dct:title" rel="dct:type">Mad Lib Thriller Title Generator (v1.1)</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://jona-stubbe.de" property="cc:attributionName" rel="cc:attributionURL">CrystalGamma (Jona Stubbe)</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
+<p><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/InteractiveResource" property="dct:title" rel="dct:type">Mad Lib Thriller Title Generator (v1.2)</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://jona-stubbe.de" property="cc:attributionName" rel="cc:attributionURL">CrystalGamma (Jona Stubbe)</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
 
 <script>//<[CDATA[
 (function(){
@@ -45,6 +47,9 @@ console.log("=> total: " + secondPart.length*thirdPart.length + " combinations")
 var generateOne = function() {
 	return "The " + secondPart[parseInt(Math.random()*secondPart.length)] + " " + thirdPart[parseInt(Math.random()*thirdPart.length)];
 };
+
+if (typeof console == 'undefined')
+	console = {log: function(){}};
 
 window.generate = function() {
 	var titles = document.createElement("ul");
